fix: tooltip arrow had a gap when resising the screen sometimes; fix: required fields that are aligned right would move to the right when hovered to display tooltip; fix: making an input required already triggers the webbrowser :invalid state and would make the input visibly invalid without human interaction; fix: marking a label required did not show the default required tooltip text;

--- a/jess/theme/default/components/inputs.less
+++ b/jess/theme/default/components/inputs.less
@@ -12,7 +12,7 @@ textarea {
     box-shadow: inset 1px 1px 0 var(--primary), inset -1px -1px 0 var(--primary);
   }
 
-  &:invalid,
+  &:invalid:not([invalid='false']),
   &[invalid]:not([invalid='false']) {
     border-color: var(--danger);
     &:hover,
@@ -252,7 +252,7 @@ textarea {
     }
 
     &:disabled,
-    &:invalid {
+    &:invalid:not([invalid='false']) {
       &:hover,
       &:focus {
         box-shadow: none;
@@ -262,7 +262,7 @@ textarea {
       }
     }
 
-    &:invalid,
+    &:invalid:not([invalid='false']),
     &[invalid]:not([invalid='false']) {
       &:hover,
       &:focus {
