--- a/jess/utilities/tooltip.less
+++ b/jess/utilities/tooltip.less
@@ -23,7 +23,7 @@
       position: absolute;
       content: '';
       left: 0.5rem;
-      bottom: 1.5rem;
+      bottom: 1.55rem;
       width: 0;
       height: 0;
     }
@@ -40,7 +40,7 @@
       &::after {
         left: initial;
         right: 0.5rem;
-        bottom: 1.5rem;
+        bottom: 1.55rem;
       }
     }
   }
@@ -53,7 +53,7 @@
         position: absolute;
         z-index: 200;
         left: 0rem;
-        bottom: -4.5rem;
+        bottom: -4.4rem;
         padding: @distance-2;
         overflow: hidden;
       }
@@ -82,7 +82,7 @@
         }
         &::after {
           left: initial;
-          top: 1.5rem;
+          top: 1.55rem;
         }
       }
     }
